[metadata]
name = c-one-cli
summary = CLI Tool to interact with Quandl WIKI Stock Price API
description-file =
    README.rst
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    conecli

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_exclused = setup.py

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0


[entry_points]
console_scripts =
    c-one-cli = conecli.cli:command_line_main

[wheel]
universal = 1
